# TerrainSimulator

./: .gitignore  CMakeLists.txt  README.txt
data/: settings.json  textures.json
include/Headers/: UserInterface.h  globalConstants.h
include/Headers/Animations/: SpriteSheet.h
include/Headers/Armory/: Bullet.h  Weapon.h  WeaponTypeEnum.h
include/Headers/Enemies/: Asteroid.h  Enemy.h  Pawn.h
include/Headers/Environments/: Debris.h
include/Headers/Factories/: EnemyFactory.h
include/Headers/GameLogic/: GameSystem.h  HelperFunctions.h  InputHandler.h
include/Headers/GameLogic/Enums/: LimitEnum.h
include/Headers/Graphics/: Button.h  ButtonList.h  GraphicsManager.h  InputObject.h  Shapes.h  TextObject.h  Texture.h
include/Headers/Physics/: CollisionManager.h  GameObject.h  RigidBody.h  RigidBodyGrid.h
include/Headers/Player/: Player.h  PlayerBuilder.h
include/Headers/Scenes/: AdjustScreenScene.h  AsteroidsScene.h  DefenderScene.h  GameSelectScene.h  LeaderboardScene.h  MainMenu.h  OptionsScene.h  PauseMenuScene.h  Scene.h  SceneManager.h  SimulatorScene.h
include/Headers/Settings/: DisplaySettings.h  GameSettings.h  SettingsManager.h
include/Headers/Utils/: Stopwatch.h
resources/: Config.json
resources/SavedData/Leaderboards/: Asteroids_Leaderboard.txt
src/: UserInterface.cpp  globalConstants.cpp  main.cpp
src/Animations/: SpriteSheet.cpp
src/Armory/: Bullet.cpp  Weapon.cpp
src/Enemies/: Asteroid.cpp  Enemy.cpp  Pawn.cpp
src/Environments/: Debris.cpp
src/Factories/: EnemyFactory.cpp
src/GameLogic/: GameSystem.cpp  HelperFunctions.cpp  InputHandler.cpp
src/GameLogic/Enums/: LimitEnum.cpp
src/Graphics/: Button.cpp  ButtonList.cpp  GraphicsManager.cpp  InputObject.cpp  TextObject.cpp  Texture.cpp
src/Physics/: CollisionManager.cpp  RigidBody.cpp  RigidBodyGrid.cpp
src/Player/: Player.cpp  PlayerBuilder.cpp
src/Scenes/: AdjustScreenScene.cpp  AsteroidsScene.cpp  DefenderScene.cpp  GameSelectScene.cpp  LeaderboardScene.cpp  MainMenu.cpp  OptionsScene.cpp  PauseMenuScene.cpp  Scene.cpp  SceneManager.cpp  SimulatorScene.cpp
src/Settings/: DisplaySettings.cpp  GameSettings.cpp  SettingsManager.cpp
src/Utils/: Stopwatch.cpp
